docs: fix scrollbar in single line code block

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -132,17 +132,16 @@ code:not([class]) {
 }
 
 .div-copy .icon-copy {
-    display: none;
-    height: 20px;
-    width: 20px;
+    opacity: 0;
+    transition: opacity .3s;
+    height: 18px;
+    width: 18px;
     cursor: pointer;
     padding: 5px;
 }
 
-.div-copy.active .icon-copy,
-.div-copy.active .tooltip-copy::before,
-.div-copy.active .tooltip-copy::after {
-    display: block;
+.div-copy.active .icon-copy {
+    opacity: 1;
 }
 
 .div-copy .tooltip-copy {
@@ -169,7 +168,6 @@ code:not([class]) {
     text-align: center;
   
     opacity: 0; /* hide by default */
-    display: none;
     transition: opacity .3s;
 }
 
@@ -191,11 +189,10 @@ code:not([class]) {
    
     /* the arrow */
     border-style: solid;
-    border-width: 5px 2px 2px 8px;
+    border-width: 2px 2px 5px 8px;
     border-color: transparent transparent transparent #444;
     
     opacity: 0;
-    display: none;
     transition: opacity .3s;
 }
 
